--- a/Week_02/nio02/pom.xml
+++ b/Week_02/nio02/pom.xml
@@ -44,6 +44,12 @@
             <version>1.7.25</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+
         <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
