--- a/Week_02/nio02/src/main/resources/web.properties
+++ b/Week_02/nio02/src/main/resources/web.properties
@@ -1,5 +1,5 @@
 servlet.one.url=/fristServlet.do
-servlet.one.className=java0.nio02.netty.tomcat.FirstServlet
+servlet.one.className=java0.nio02.netty.tomcat.servlet.FirstServlet
 
 servlet.two.url=/secondServlet.do
-servlet.two.className=java0.nio02.netty.tomcat.SecondServlet
+servlet.two.className=java0.nio02.netty.tomcat.servlet.SecondServlet
