--- a/Week_02/task-gateway/pom.xml
+++ b/Week_02/task-gateway/pom.xml
@@ -56,6 +56,12 @@
             <version>1.2.70</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.2.2</version>
+        </dependency>
+
         <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
