--- a/Week_05/work05-sb2/pom.xml
+++ b/Week_05/work05-sb2/pom.xml
@@ -29,15 +29,92 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<targetPath>${project.build.directory}/classes</targetPath>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>conf/${configuration.directory}</directory>
+				<targetPath>${project.build.directory}/conf</targetPath>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>${bin.dir}</directory>
+				<targetPath>${project.build.directory}/bin</targetPath>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+
 		<plugins>
+
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>8</source>
+					<target>8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<descriptor>pack/assembly.xml</descriptor>
+					<finalName>${project.artifactId}</finalName>
+					<attach>false</attach>
+					<appendAssemblyId>false</appendAssemblyId>
+					<archive>
+						<manifest>
+							<!-- 此处指定main方法入口的class -->
+							<mainClass>com.ipman.work05sb2.Work05Sb2Application</mainClass>
+						</manifest>
+					</archive>
+					<formats>
+						<format>dir</format>
+					</formats>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<properties>
+				<configuration.directory>dev</configuration.directory>
+				<app.name>work05-sb2</app.name>
+				<bin.dir>bin</bin.dir>
+			</properties>
+		</profile>
+		<profile>
+			<id>test</id>
+			<properties>
+				<configuration.directory>test</configuration.directory>
+				<app.name>work05-sb2</app.name>
+				<bin.dir>bin</bin.dir>
+			</properties>
+		</profile>
+	</profiles>
 </project>
