add : starter by autoConfigurate

--- a/Week_05/work05-sb2/pom.xml
+++ b/Week_05/work05-sb2/pom.xml
@@ -34,6 +34,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- 自定义starter -->
+		<dependency>
+			<groupId>com.ipman</groupId>
+			<artifactId>work05-spring-boot-starter-test</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
