--- a/Week_05/work05-sb2/conf/test/application.properties
+++ b/Week_05/work05-sb2/conf/test/application.properties
@@ -1,5 +1,5 @@
-server.port=9009
-
+server.port=9000
 
 #自定义starter
+custom.boot.starter.student.enabled=true
 custom.boot.starter.student.name=ipman
