--- a/Week_05/work05-sb2/pom.xml
+++ b/Week_05/work05-sb2/pom.xml
@@ -42,6 +42,16 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+		<!-- jpa集成了hibermnte对象持久化开源框架	-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
 
 	</dependencies>
 
