--- a/Week_05/work05-sb2/src/main/resources/application.properties
+++ b/Week_05/work05-sb2/src/main/resources/application.properties
@@ -3,3 +3,16 @@ server.port=9000
 #自定义starter
 custom.boot.starter.student.enabled=true
 custom.boot.starter.student.name=ipman
+
+# 数据源配置
+spring.datasource.url = jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8
+spring.datasource.username = root
+spring.datasource.password =
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+
+# jpa配置
+spring.jpa.database = MYSQL
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
