--- a/Week_05/work05-sb2/src/main/resources/application.properties
+++ b/Week_05/work05-sb2/src/main/resources/application.properties
@@ -9,6 +9,17 @@ spring.datasource.url = jdbc:mysql://localhost:3306/test?useUnicode=true&charact
 spring.datasource.username = root
 spring.datasource.password =
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
+# 配置Hikari的
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=15
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.pool-name=DatebookHikariCP
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-test-query=SELECT 1
+
 
 # jpa配置
 spring.jpa.database = MYSQL
