--- a/Week_07/sharding-sphere-jdbc/src/main/resources/application.properties
+++ b/Week_07/sharding-sphere-jdbc/src/main/resources/application.properties
@@ -54,3 +54,22 @@ shardingsphere.slave2.datasource.testOnBorrow= true
 shardingsphere.slave2.datasource.testOnReturn= false
 shardingsphere.slave2.datasource.poolPreparedStatements= false
 shardingsphere.slave2.datasource.maxPoolPreparedStatementPerConnectionSize= 20
+
+# sharding datasource
+shardingsphere.proxy.datasource.type= com.alibaba.druid.pool.DruidDataSource
+shardingsphere.proxy.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+shardingsphere.proxy.datasource.url= jdbc:mysql://10.211.55.6:3307/master_slave_db?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&autoReconnectForPools=true&useSSL=false&useAffectedRows=true
+shardingsphere.proxy.datasource.username= root
+shardingsphere.proxy.datasource.password= root
+shardingsphere.proxy.datasource.initialSize= 5
+shardingsphere.proxy.datasource.minIdle= 5
+shardingsphere.proxy.datasource.maxActive= 30
+shardingsphere.proxy.datasource.maxWait= 60000
+shardingsphere.proxy.datasource.timeBetweenEvictionRunsMillis= 60000
+shardingsphere.proxy.datasource.minEvictableIdleTimeMillis= 30000
+shardingsphere.proxy.datasource.validationQuery= select 'x'
+shardingsphere.proxy.datasource.testWhileIdle= true
+shardingsphere.proxy.datasource.testOnBorrow= true
+shardingsphere.proxy.datasource.testOnReturn= false
+shardingsphere.proxy.datasource.poolPreparedStatements= false
+shardingsphere.proxy.datasource.maxPoolPreparedStatementPerConnectionSize= 20
